--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,10 @@
 {
+    "plugins": [
+        "@babel/plugin-transform-runtime",
+        "@babel/plugin-proposal-object-rest-spread",
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-syntax-dynamic-import"
+    ],
     "presets": [
         "@babel/preset-env",
         "@babel/preset-react"
