--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,9 @@
     ],
     "rules": {
         "react/jsx-filename-extension": 0,
+        "react/prop-types": 0,
+        "no-undef": 0,
+        "no-console": 0,
         "no-var": 0
     }
 }
