--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.13.0",
+    "react-test-renderer": "^16.12.0",
     "sass": "^1.24.4",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.1.2",
